[project]
name = "warrior-gym-watcher"
version = "0.1.0"
description = "see repository README file"
authors = [
    {name = "Cristian Moretto",email = "cmoretto@uwaterloo.ca"}
]
license = {text = "see repository license file"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "fake-useragent (>=2.2.0,<3.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "warrior_gym_watcher", from = "src"}]